--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -95,7 +95,7 @@ dioxus-rsx-hotreload = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-core-types = { workspace = true }
-dioxus-hot-reload = { workspace = true, features = ["serve"] }
+dioxus-devtools = { workspace = true }
 ignore = "0.4.22"
 env_logger = "0.11.3"
 
