--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -22,7 +22,7 @@ dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "seri
 dioxus-cli-config = { workspace = true }
 generational-box = { workspace = true }
 # hotreload only works on desktop platforms.... mobile is still wip
-dioxus-hot-reload = { workspace = true, optional = true, features = ["serve", "client"]}
+dioxus-devtools = { workspace = true, optional = true }
 
 serde = "1.0.136"
 serde_json = "1.0.79"
@@ -94,7 +94,7 @@ tokio_runtime = ["dep:tokio"]
 fullscreen = ["wry/fullscreen"]
 transparent = ["wry/transparent"]
 devtools = ["wry/devtools"]
-hot-reload = ["dep:dioxus-hot-reload", "dioxus-signals"]
+hot-reload = ["dep:dioxus-devtools", "dioxus-signals"]
 gnu = []
 
 [package.metadata.docs.rs]
