--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["dom", "ui", "gui", "react", "wasm"]
 dioxus-core = { workspace = true }
 dioxus-core-types = { workspace = true }
 dioxus-html = { workspace = true, features = ["wasm-bind"] }
-dioxus-hot-reload = { workspace = true, features = ["client"] }
+dioxus-devtools = { workspace = true }
 dioxus-signals = { workspace = true }
 dioxus-interpreter-js = { workspace = true, features = [
     "minimal_bindings",
