--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
   // "rust-analyzer.check.workspace": true,
   // "rust-analyzer.check.workspace": false,
   // "rust-analyzer.check.features": "all",
-  // "rust-analyzer.cargo.features": "all",
+  "rust-analyzer.cargo.features": "all",
+  "rust-analyzer.check.features": "all",
   // "rust-analyzer.check.allTargets": true,
   // we don't want the formatter to kick in while we're working on dioxus itself
   "dioxus.formatOnSave": "disabled",
