--- a/example-projects/ecommerce-site/Cargo.toml
+++ b/example-projects/ecommerce-site/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cached = "0.44.0"
 dioxus = { workspace = true, features = ["fullstack", "router"] }
-reqwest = { version = "0.11.16", features = ["json"] }
-serde = "1.0.160"
-chrono = { version = "0.4.24", features = ["serde"] }
+reqwest = { workspace = true, features = ["json"] }
+serde = { workspace = true }
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+chrono = { workspace = true, features = ["serde", "wasmbind"] }
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+chrono = { workspace = true, features = ["serde"] }
 
 [features]
 web = ["dioxus/web"]
