Simplify cli-config, hotreload -> devtools (drop to 0 deps, fast compile times) (#2975)
* simplify cli-config crate
* clean up configs
* add devtools crate, update cargo imports
* fix serve addr, fix websocket proxy issue
* add comment about opt profiles
* rename hot-reload to devtools

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,11 @@
     "editor.formatOnSave": false
   },
   // "rust-analyzer.check.workspace": true,
-  "rust-analyzer.check.workspace": false,
-  "rust-analyzer.check.features": "all",
+  // "rust-analyzer.check.workspace": false,
+  // "rust-analyzer.check.features": "all",
   "rust-analyzer.cargo.features": "all",
-  "rust-analyzer.check.allTargets": true,
+  "rust-analyzer.check.features": "all",
+  // "rust-analyzer.check.allTargets": true,
   // we don't want the formatter to kick in while we're working on dioxus itself
   "dioxus.formatOnSave": "disabled",
 }
