--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ members = [
     "packages/rsx-rosetta",
     "packages/generational-box",
     "packages/signals",
-    "packages/hot-reload",
+    "packages/devtools",
+    "packages/devtools-types",
     "packages/fullstack",
     "packages/server-macro",
     "packages/static-generation",
@@ -91,9 +92,10 @@ dioxus-rsx = { path = "packages/rsx", version = "0.6.0-alpha.0" }
 dioxus-rsx-hotreload = { path = "packages/rsx-hotreload", version = "0.6.0-alpha.0" }
 dioxus-rsx-rosetta = { path = "packages/rsx-rosetta", version = "0.6.0-alpha.0" }
 dioxus-signals = { path = "packages/signals", version = "0.6.0-alpha.0" }
-dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.0", default-features = false}
+dioxus-cli-config = { path = "packages/cli-config", version = "0.6.0-alpha.0" }
 generational-box = { path = "packages/generational-box", version = "0.6.0-alpha.0" }
-dioxus-hot-reload = { path = "packages/hot-reload", version = "0.6.0-alpha.0" }
+dioxus-devtools = { path = "packages/devtools", version = "0.6.0-alpha.0" }
+dioxus-devtools-types = { path = "packages/devtools-types", version = "0.6.0-alpha.0" }
 dioxus-fullstack = { path = "packages/fullstack", version = "0.6.0-alpha.1" }
 dioxus-static-site-generation = { path = "packages/static-generation", version = "0.6.0-alpha.0" }
 dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.0", default-features = false }
@@ -171,6 +173,7 @@ web-sys = { version = "0.3.56", default-features = false }
 dirs = "5.0.1"
 cargo-config2 = "0.1.26"
 criterion = { version = "0.5" }
+walrus = "*"
 
 # desktop
 wry = { version = "0.43.0", default-features = false }
@@ -190,13 +193,9 @@ objc_id = "0.1.1"
 [profile.dev.package.dioxus-core-macro]
 opt-level = 3
 
-# Enable a small amount of optimization in debug mode
-[profile.cli-dev]
-inherits = "dev"
-opt-level = 1
-
-# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
-[profile.cli-dev.package."*"]
+# wasm bindgen is slooooooow, but it's because we're actually processing the wasm
+# so, lets just bump up walrus to make it faster, no need for any special profiles
+[profile.dev.package.walrus]
 opt-level = 3
 
 # Disable debug assertions to check the released path of core and other packages, but build without optimizations to keep build times quick
