--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -16,7 +16,7 @@ thiserror = { workspace = true }
 wasm-bindgen-cli-support = "0.2"
 wasm-bindgen-shared = "0.2"
 colored = "2.0.0"
-dioxus-cli-config = { workspace = true, features = ["cli"], default-features = false }
+dioxus-cli-config = { workspace = true }
 
 # features
 log = "0.4.14"
@@ -78,6 +78,7 @@ toml_edit = "0.22.20"
 
 # bundling
 tauri-bundler = { workspace = true }
+tauri-utils = { workspace = true }
 
 # formatting
 # syn = { workspace = true }
@@ -95,7 +96,7 @@ dioxus-rsx-hotreload = { workspace = true }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-core-types = { workspace = true }
-dioxus-hot-reload = { workspace = true, features = ["serve"] }
+dioxus-devtools = { workspace = true }
 ignore = "0.4.22"
 env_logger = "0.11.3"
 
@@ -119,9 +120,7 @@ built = { version = "=0.7.4", features = ["git2"] }
 default = []
 plugin = []
 tokio-console = ["dep:console-subscriber"]
-
-# when releasing dioxus, we want to enable wasm-opt
-wasm-opt = ["dep:wasm-opt"]
+# optimizations = ["dep:wasm-opt"]
 
 [[bin]]
 path = "src/main.rs"
