--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -19,10 +19,10 @@ dioxus-html = { workspace = true, features = [
 ] }
 dioxus-signals = { workspace = true, optional = true }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "serialize"] }
-dioxus-cli-config = { workspace = true, features = ["read-config"] }
+dioxus-cli-config = { workspace = true }
 generational-box = { workspace = true }
 # hotreload only works on desktop platforms.... mobile is still wip
-dioxus-hot-reload = { workspace = true, optional = true, features = ["serve", "client"]}
+dioxus-devtools = { workspace = true, optional = true }
 
 serde = "1.0.136"
 serde_json = "1.0.79"
@@ -89,16 +89,15 @@ core-foundation = "0.9.3"
 objc = "0.2.7"
 
 [features]
-default = ["tokio_runtime", "wry/objc-exception", "hot-reload", "devtools"]
+default = ["tokio_runtime", "wry/objc-exception", "devtools"]
 tokio_runtime = ["dep:tokio"]
 fullscreen = ["wry/fullscreen"]
 transparent = ["wry/transparent"]
-devtools = ["wry/devtools"]
-hot-reload = ["dep:dioxus-hot-reload", "dioxus-signals"]
+devtools = ["wry/devtools", "dep:dioxus-devtools", "dioxus-signals"]
 gnu = []
 
 [package.metadata.docs.rs]
-features = ["tokio_runtime", "hot-reload"]
+features = ["tokio_runtime", "devtools"]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 default-features = false
 targets = [
