--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -61,25 +61,24 @@ tower-layer = { version = "0.3.2", optional = true }
 parking_lot = { version = "0.12.1", features = ["send_guard"], optional = true }
 web-sys = { version = "0.3.61", optional = true, features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
 
-dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
-clap = { version = "4.5.7", optional = true, features = ["derive"] }
+dioxus-cli-config = { workspace = true, optional = true }
 
+dioxus-devtools = { workspace = true, optional = true }
 aws-lc-rs = { version = "1.8.1", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { workspace = true, features = ["rt", "sync"], optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-dioxus-hot-reload = { workspace = true, features = ["serve"] }
 tokio = { workspace = true, features = ["rt", "sync", "rt-multi-thread"], optional = true }
 
 [dev-dependencies]
 dioxus = { workspace = true, features = ["fullstack"] }
 
 [features]
-default = ["hot-reload", "panic_hook", "document", "file_engine", "mounted"]
+default = ["devtools", "panic_hook", "document", "file_engine", "mounted"]
 panic_hook = ["dioxus-web?/panic_hook"]
-hot-reload = ["dioxus-web?/hot_reload", "dioxus-hot-reload/serve"]
+devtools = ["dioxus-web?/devtools", "dep:dioxus-devtools"]
 mounted = ["dioxus-web?/mounted"]
 file_engine = ["dioxus-web?/file_engine"]
 document = ["dioxus-web?/document"]
@@ -108,8 +107,6 @@ server = [
     "dep:async-trait",
     "dep:parking_lot",
     "dioxus-interpreter-js",
-    "dep:clap",
-    "dioxus-cli-config/read-from-args",
 ]
 aws-lc-rs = ["dep:aws-lc-rs"]
 
