--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -120,7 +120,7 @@ built = { version = "=0.7.4", features = ["git2"] }
 default = []
 plugin = []
 tokio-console = ["dep:console-subscriber"]
-# optimizations = ["dep:wasm-opt"]
+optimizations = ["dep:wasm-opt"]
 
 [[bin]]
 path = "src/main.rs"
