--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -64,7 +64,7 @@ panic_hook = ["dep:console_error_panic_hook"]
 hydrate = ["web-sys/Comment", "ciborium", "dep:serde"]
 mounted = ["web-sys/Element", "dioxus-html/mounted"]
 file_engine = [
-    "dioxus-html/file-engine",
+    "dioxus-html/file_engine",
 ]
 devtools = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location", "dep:serde_json", "dep:serde", "dioxus-core/serialize"]
 document = ["dioxus-html/document", "dep:serde-wasm-bindgen", "dep:serde_json", "dep:serde"]
