file engine rename

--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -14,7 +14,7 @@ dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-html = { workspace = true, features = [
     "serialize",
     "mounted",
-    "file-engine",
+    "file_engine",
 ] }
 dioxus-signals = { workspace = true, optional = true }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "serialize"] }
