--- a/packages/static-generation/Cargo.toml
+++ b/packages/static-generation/Cargo.toml
@@ -13,18 +13,18 @@ resolver = "2"
 [dependencies]
 dioxus-fullstack = { workspace = true }
 dioxus-lib.workspace = true
-dioxus-router = { workspace = true }
+dioxus-router = { workspace = true, features = ["fullstack"]}
 dioxus-ssr = { workspace = true, optional = true }
 dioxus-isrg = { workspace = true, optional = true }
 axum = { workspace = true, features = ["ws", "macros"], optional = true }
-tower = { workspace = true, optional = true }
 tower-http = { workspace = true, features = ["fs"], optional = true }
 dioxus-devtools = { workspace = true, optional = true }
 dioxus-cli-config = { workspace = true, optional = true }
 dioxus-web = { workspace = true, features = ["hydrate"], optional = true }
 tokio = { workspace = true, optional = true }
 http = { workspace = true, optional = true }
-tracing = { workspace = true }
+tower = { workspace = true, features = ["util"], optional = true }
+tracing.workspace = true
 
 [dev-dependencies]
 dioxus = { workspace = true }
